--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.1.8",
     "antd": "^5.24.9",
     "babel-plugin-styled-components": "^2.1.4",
     "emailjs-com": "^3.2.0",
