--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "eslint-config-next": "15.3.1",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4"
-  }
+  },
+  "browserslist": [
+  "last 2 Chrome versions",
+  "last 2 Firefox versions",
+  "last 2 Edge versions",
+  "Safari >= 13"
+]
 }
