--- a/package.json
+++ b/package.json
@@ -35,10 +35,18 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4"
   },
-  "browserslist": [
-  "last 2 Chrome versions",
-  "last 2 Firefox versions",
-  "last 2 Edge versions",
-  "Safari >= 13"
-]
+  "browserslist": {
+  "production": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions",
+    "last 2 Edge versions",
+    "Safari >= 13"
+  ],
+  "development": [
+    "last 1 Chrome version",
+    "last 1 Firefox version",
+    "last 1 Edge version"
+  ]
+}
+
 }
