--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4"
   },
-  "browserslist": {
+ "browserslist": {
   "production": [
     "last 2 Chrome versions",
     "last 2 Firefox versions",
@@ -44,8 +44,7 @@
   ],
   "development": [
     "last 1 Chrome version",
-    "last 1 Firefox version",
-    "last 1 Edge version"
+    "last 1 Firefox version"
   ]
 }
 
